--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CryptoCurrency">
         <activity android:name=".guidePage"></activity>
-        <activity android:name=".splashActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".splashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
